fix(dashboard): solve layout issues

--- a/mirrorgate-dashboard/src/sass/_general.scss
+++ b/mirrorgate-dashboard/src/sass/_general.scss
@@ -127,7 +127,7 @@ board-row, board-column, tile-container {
         display: flex;
         flex-direction: column;
 
-        &[data-count-x="2"]{
+        &[data-count-x="2"][data-count="4"]{
             width: 200%;
         }
     }
